Alterando link do repositório do github

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<div class="right">
 					<a href="#/docs">Getting started</a>
 					<a href="#/docs">Documentation</a>
-					<a href="https://github.com/matuzalemteles1/Kep" target="_blank">Community</a>
+					<a href="https://github.com/KepPHP/Kep" target="_blank">Community</a>
 				</div>
 			</div>
 		</div>
@@ -32,7 +32,7 @@
 			</div>
 			<div class="right">
 				<a href="#/about">Sobre</a>
-				<a href="https://github.com/matuzalemteles1/Kep">Github</a>
+				<a href="https://github.com/KepPHP/Kep">Github</a>
 				<a href="#" target="_blank">Twitter</a>
 			</div>
 		</div>
