--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="app" lang="en">
 <head>
-	<meta name="theme-color" content="#333333">
+	<meta name="theme-color" content="#3e2c5a">
 	<meta charset="UTF-8">
 	<title ng-bind="title">Kep Framework for PHP</title>
 	<link href="css/style.css" rel="stylesheet">
