Adicionando o twitter para acompanhar as atualizações

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="right">
 				<a href="#/about">Sobre</a>
 				<a href="https://github.com/KepPHP/Kep">Github</a>
-				<a href="#" target="_blank">Twitter</a>
+				<a href="https://twitter.com/MatuzalemTeles" target="_blank">Twitter</a>
 			</div>
 		</div>
 	</footer>
