Adicionando o menu da Store e modificando documentação do controller

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<div class="right">
 					<a href="#/docs">Getting started</a>
 					<a href="#/docs">Documentation</a>
-					<a href="https://github.com/KepPHP/Kep" target="_blank">Community</a>
+					<a href="#/store">Store</a>
 				</div>
 			</div>
 		</div>
