Layout da Store

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 					<a href="#/docs">Getting started</a>
 					<a href="#/docs">Documentation</a>
 					<a href="#/store">Store</a>
+					<a href="#/blog">Blog</a>
 				</div>
 			</div>
 		</div>
