--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app" lang="en">
+<html ng-app="kep" lang="en">
 <head>
 	<meta name="theme-color" content="#3e2c5a">
 	<meta charset="UTF-8">
