--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 	
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
+	<script async src="https://static.medium.com/embed.js"></script>
 	
 	<script src="app/app/app.js"></script>
 	<script src="app/controllers/controllers.js"></script>
