--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 	<meta name="theme-color" content="#3e2c5a">
 	<meta charset="UTF-8">
 	<title ng-bind="title">Kep Framework for PHP</title>
-	<link href="css/style.css" rel="stylesheet">
 	<link rel="icon" type="image/png" href="imagens/favicon-kep.png" />
+	
+	<!-- BEGIN CSS -->
+	<link href="css/style.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/get-involved.css">
+	<!-- END CSS -->
 </head>
 <body>
 	<header>
@@ -17,6 +21,7 @@
 				<div class="right">
 					<a ng-class="{ active: category == 'started'}" href="#/docs">Getting started</a>
 					<a ng-class="{ active: category == 'docs'}" href="#/docs/routing">Documentation</a>
+					<a ng-class="{ active: category == 'get-involved'}" href="#/get-involved">Envolva-se</a>
 					<a ng-class="{ active: category == 'store'}" href="#/store">Store</a>
 					<a ng-class="{ active: category == 'blog'}" href="#/blog">Blog</a>
 				</div>
@@ -39,11 +44,17 @@
 		</div>
 	</footer>
 	
+	<!-- BEGIN JS -->
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
 	<script async src="https://static.medium.com/embed.js"></script>
 	
 	<script src="app/app/app.js"></script>
 	<script src="app/controllers/controllers.js"></script>
+	
+	<script src="js/Chart.js"></script>
+	<script src="js/Chart.StackedBar.js"></script>
+	<script src="js/angular-chart.js"></script>
+	<!-- END JS  -->
 </body>
 </html>
