Mudando a fonte para Roboto

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<!-- BEGIN CSS -->
 	<link href="css/style.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/get-involved.css">
+	
+	<!-- Font Roboto -->
+		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<!-- END CSS -->
 </head>
 <body>
