Adicionando menu issues ao footer

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 				<img src="imagens/logo-footer.png" />
 			</div>
 			<div class="right">
+				<a target="_blank" href="https://github.com/KepPHP/Kep/issues">Issues</a>
 				<a href="#/about">Sobre</a>
 				<a href="https://github.com/KepPHP/Kep">Github</a>
 				<a href="https://twitter.com/getkep" target="_blank">Twitter</a>
