Adicionando novas metas

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html ng-app="kep" lang="en">
+<html ng-app="kep">
 <head>
 	<meta name="theme-color" content="#3e2c5a">
 	<meta charset="UTF-8">
 	<title ng-bind="title">Kep Framework for PHP</title>
+	<meta name="author" content="Matuzalém Teles">
+	<meta name="description" content="Kep - Flexible and fast framework for creating PHP API">
+	<meta name="keywords" content="kep, php, framework, web, flexible, fast, matuzalém teles">
 	<link rel="icon" type="image/png" href="imagens/favicon-kep.png" />
 	
 	<!-- BEGIN CSS -->
