Alterando para o inglês

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="right">
 					<a ng-class="{ active: category == 'started'}" href="#/docs">Getting started</a>
 					<a ng-class="{ active: category == 'docs'}" href="#/docs/routing">Documentation</a>
-					<a ng-class="{ active: category == 'get-involved'}" href="#/get-involved">Envolva-se</a>
+					<a ng-class="{ active: category == 'get-involved'}" href="#/get-involved">Get Involved</a>
 					<a ng-class="{ active: category == 'store'}" href="#/store">Store</a>
 				</div>
 			</div>
