--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 				<img src="imagens/logo-footer.png" />
 			</div>
 			<div class="right">
-				<a target="_blank" href="https://github.com/KepPHP/Kep/issues">Issues</a>
+				<a target="_blank" href="https://github.com/getkep/Kep/issues">Issues</a>
 				<a href="#/about">Sobre</a>
-				<a href="https://github.com/KepPHP/Kep">Github</a>
+				<a href="https://github.com/getkep/Kep">Github</a>
 				<a href="https://twitter.com/getkep" target="_blank">Twitter</a>
 			</div>
 		</div>
